# MyFirstLVGLPrj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lv_100ask_lesson_demos_conf.h  lv_conf.h
ckldemos/: CMakeLists.txt
ckldemos/include/: ckl_mainwindow.h
ckldemos/include/activity/: global.h
ckldemos/include/activity/mainwindow/: mainwindow.h  model_mainwindow.h  ui_mainwindow.h
ckldemos/include/cklgui/: cklactivity.h  cklfragment.h  cklmodel.h  cklview.h  model_ckl.h  ui_ckl.h  vm_ckl.h
ckldemos/include/fragment/subform/homeform/: homeform.h  model_homeform.h  ui_homeform.h
ckldemos/include/fullscreenform/mainwindow/: cklmainwindow.h  model_cklmainwindow.h  ui_cklmainwindow.h
ckldemos/src/: ckl_mainwindow.c  ckl_mainwindow.cpp
ckldemos/src/activity/mainwindow/: mainwindow.cpp
ckldemos/src/cklgui/: cklactivity.cpp  cklfragment.cpp  cklmodel.cpp  cklview.cpp  model_ckl.cpp  ui_ckl.cpp  vm_ckl.cpp
ckldemos/src/fragment/subform/homeform/: homeform.cpp
ckldemos/src/fullscreenform/mainwindow/: cklmainwindow.cpp
cklguiguider/: CMakeLists.txt
cklguiguider/custom/: custom.c  custom.h  lv_conf_ext.h
cklhmibsp/: CMakeLists.txt
cklhmibsp/include/: cklhmibsp.h
cklhmibsp/src/: cklhmibsp.cpp
cklsquarelinestudio/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
cklsquarelinestudio/components/: ui_comp.c  ui_comp.h  ui_comp_dropdown.c  ui_comp_dropdown.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_roller.c  ui_comp_roller.h
cklsquarelinestudio/fonts/: ui_font_Big.c  ui_font_Medium.c  ui_font_Number.c  ui_font_Small.c
cklsquarelinestudio/images/: ui_img_battery_bg_png.c  ui_img_gps_bg_png.c  ui_img_gps_knob_png.c  ui_img_icn_battery_png.c  ui_img_icn_bike_png.c  ui_img_icn_charge_png.c  ui_img_icn_flash_png.c  ui_img_icn_map_png.c  ui_img_icn_ok_png.c  ui_img_icn_settings_png.c  ui_img_icn_x2_png.c  ui_img_icn_x_png.c  ui_img_menu_line_png.c  ui_img_menu_on_png.c  ui_img_particle_1_png.c  ui_img_particle_2_png.c  ui_img_particle_3_png.c  ui_img_pin_line_png.c  ui_img_pin_on_png.c  ui_img_right_png.c  ui_img_settings_corner_png.c  ui_img_slider_battery_png.c  ui_img_speed_slider_png.c  ui_img_volume_off_png.c  ui_img_volume_on_png.c  ui_img_water_1_png.c  ui_img_water_2_png.c
cklsquarelinestudio/screens/: ui_Home.c  ui_Settings.c
lv_100ask_lesson_demos/: CMakeLists.txt  lv_100ask_lesson_demos.h
lv_100ask_lesson_demos/src/lesson_2_9_1/: lesson_2_9_1.c
lv_100ask_lesson_demos/src/lesson_3_11_1/: lesson_3_11_1.c
lv_100ask_lesson_demos/src/lesson_3_18_1/: lesson_3_18_1.c
lv_100ask_lesson_demos/src/lesson_7_6/: lesson_7_6.c
main/src/: main.c
patch4lvgl/: src_misc_lv_anim.c.patch  src_misc_lv_anim.h.patch
